[gd_scene load_steps=2 format=3 uid="uid://ur3a506lypfy"]

[ext_resource type="Script" uid="uid://dyqqohyxyq4il" path="res://stats_ui.gd" id="1_h18qs"]

[node name="StatsUI" type="Control"]
visible = false
layout_mode = 3
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_h18qs")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
custom_minimum_size = Vector2(250, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -39.0
grow_horizontal = 0
grow_vertical = 2
mouse_filter = 2

[node name="Button" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
text = "STATS (TAB)"

[node name="Panel" type="Panel" parent="VBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
mouse_filter = 2

[node name="PlayerBulletDamageLabel" type="Label" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="PlayerLaserDamageLabel" type="Label" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="PlayerTurnRadiusLabel" type="Label" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[node name="PlayerMoveSpeedLabel" type="Label" parent="VBoxContainer/Panel/VBoxContainer"]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_button_pressed"]
